--- a/picpuk.conf
+++ b/picpuk.conf
@@ -1,10 +1,10 @@
 [global]
 server.socket_host = "127.0.0.1"
-server.socket_port = 8010
+server.socket_port = 8101
 server.thread_pool = 111
 server.socket_queue_size = 33
-log.access_file = "/home/www/hyperload/access.log"
-log.error_file = "/home/www/hyperload/errors.log"
+log.access_file = "/home/www/picpuk/access.log"
+log.error_file = "/home/www/picpuk/errors.log"
 
 tools.encode.on = True
 tools.encode.encoding = "utf-8"
@@ -15,10 +15,10 @@ tools.sessions.timeout = 30
 
 
 [hyperload]
-base_dir: "/home/www/hyperload/"
+base_dir: "/home/www/picpuk/"
 
 [database]
-connection: "dbname=hyperload user=hyperload password=77^f=nN*"
+connection: "dbname=picpuk user=picpuk password=77^f=nN*"
 
 [facebook]
 app_id: "328250827233463"
