--- a/picpuk.conf
+++ b/picpuk.conf
@@ -18,7 +18,7 @@ tools.sessions.timeout = 30
 base_dir: "/home/www/picpuk/"
 
 [database]
-connection: "dbname=picpuk user=picpuk password=77^f=nN*"
+connection: "dbname=picpuk user=picpuk password=Bn6|'=.8"
 
 [facebook]
 app_id: "328250827233463"
