--- a/picpuk.conf
+++ b/picpuk.conf
@@ -14,6 +14,11 @@ tools.sessions.on = True
 tools.sessions.timeout = 30
 
 
+[/imgs]
+tools.staticdir.on = True
+tools.staticdir.dir = "imgs"
+
+
 [hyperload]
 base_dir: "/home/www/picpuk/"
 
