--- a/picpuk.conf
+++ b/picpuk.conf
@@ -13,6 +13,8 @@ tools.gzip.on = True
 tools.sessions.on = True
 tools.sessions.timeout = 30
 
+[/]
+tools.staticdir.root: cpapp.current_dir
 
 [/imgs]
 tools.staticdir.on = True
