--- a/picpuk.conf
+++ b/picpuk.conf
@@ -14,7 +14,7 @@ tools.sessions.on = True
 tools.sessions.timeout = 30
 
 [/]
-tools.staticdir.root: cpapp.current_dir
+tools.staticdir.root: "/home/www/picpuk/"
 
 [/imgs]
 tools.staticdir.on = True
