--- a/picpuk.conf
+++ b/picpuk.conf
@@ -18,7 +18,7 @@ tools.staticdir.root: "/home/www/picpuk/"
 
 [/imgs]
 tools.staticdir.on = True
-tools.staticdir.dir = "imgs"
+tools.staticdir.dir = "pics"
 
 
 [hyperload]
