--- a/picpuk.conf
+++ b/picpuk.conf
@@ -24,3 +24,12 @@ connection: "dbname=picpuk user=picpuk password=Bn6|'=.8"
 app_id: "328250827233463"
 app_secret: "db5022482f3e6ac5ee54c342c1c55f6f"
 AUTHORIZE_CALLBACK_URL = "http://hyperload.net/authorizecallback"
+
+
+
+[/]
+tools.staticdir.root = "/home/www/picpuk/layout/templates/js/"
+
+[/blueimp]
+tools.staticdir.on = True
+tools.staticdir.dir = "blueimp-jQuery-File-Upload"
