--- a/picpuk.conf
+++ b/picpuk.conf
@@ -3,6 +3,7 @@ server.socket_host = "127.0.0.1"
 server.socket_port = 8101
 server.thread_pool = 111
 server.socket_queue_size = 33
+server.max_request_body_size = 0
 log.access_file = "/home/www/picpuk/access.log"
 log.error_file = "/home/www/picpuk/errors.log"
 
