--- a/picpuk.conf
+++ b/picpuk.conf
@@ -14,6 +14,8 @@ tools.gzip.on = True
 tools.sessions.on = True
 tools.sessions.timeout = 30
 
+response.timeout = 3600
+
 
 [hyperload]
 base_dir: "/home/www/picpuk/"
