--- a/picpuk.conf
+++ b/picpuk.conf
@@ -24,7 +24,7 @@ tools.encode.on = True
 tools.encode.encoding = "utf-8"
 tools.gzip.on = True
 
-tools.sessions.on = True
+tools.sessions.on = False
 tools.sessions.timeout = 30
 
 response.timeout = 3600
